--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3501,7 +3501,7 @@
          <footer class="_zgc1p6">
           <div class="_1t0j0qc">
            <div></div>
-           <div class="_jro6t0"><button disabled="" type="submit" class="btn-dark">Save</button></div>
+           <div class="flex"><button disabled="" type="submit" class="btn-dark">Save</button></div>
           </div>
          </footer>
         </div>
@@ -3666,7 +3666,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -3737,7 +3737,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -3808,7 +3808,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -3879,7 +3879,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -3950,7 +3950,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4021,7 +4021,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4092,7 +4092,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4163,7 +4163,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4234,7 +4234,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4418,7 +4418,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4489,7 +4489,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4560,7 +4560,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4631,7 +4631,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4702,7 +4702,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4773,7 +4773,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4844,7 +4844,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4915,7 +4915,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
@@ -4986,7 +4986,7 @@
                                ></div>
                               </div>
                              </div>
-                             <div class="_1c1qb2i"><div class="_jro6t0"></div></div>
+                             <div class="_1c1qb2i"><div class="flex"></div></div>
                             </div>
                            </div>
                           </div>
