--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11067,7 +11067,7 @@
                                                                                     id="GuestPicker-book_it-form-adults-subtitle"
                                                                                     class="_1wh7hnv">Age 13+</div>
                                                                                 </div>
-                                                                                <div class="_jro6t0">
+                                                                                <div class="flex">
                                                                                   <div class="_3zlfom"
                                                                                     id="GuestPicker-book_it-form-adults-stepper">
                                                                                     <button class="_ul9u8c"
@@ -11118,7 +11118,7 @@
                                                                                     id="GuestPicker-book_it-form-children-subtitle"
                                                                                     class="_1wh7hnv">Ages 2–12</div>
                                                                                 </div>
-                                                                                <div class="_jro6t0">
+                                                                                <div class="flex">
                                                                                   <div class="_3zlfom"
                                                                                     id="GuestPicker-book_it-form-children-stepper">
                                                                                     <button class="_ul9u8c"
@@ -11169,7 +11169,7 @@
                                                                                     id="GuestPicker-book_it-form-infants-subtitle"
                                                                                     class="_1wh7hnv">Under 2</div>
                                                                                 </div>
-                                                                                <div class="_jro6t0">
+                                                                                <div class="flex">
                                                                                   <div class="_3zlfom"
                                                                                     id="GuestPicker-book_it-form-infants-stepper">
                                                                                     <button class="_ul9u8c"
@@ -11224,7 +11224,7 @@
                                                                                       class="_15rpys7s">Bringing a
                                                                                       service animal?</button></div>
                                                                                 </div>
-                                                                                <div class="_jro6t0">
+                                                                                <div class="flex">
                                                                                   <div class="_3zlfom"
                                                                                     id="GuestPicker-book_it-form-pets-stepper">
                                                                                     <button class="_ul9u8c"
@@ -27713,7 +27713,7 @@
                 <div class="_mmcfcd">
                   <div id="inaccurate_incorrect" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="inaccurate_incorrect-row-radio-button" class="_13xlah4">
-                      <div class="_jro6t0">
+                      <div class="flex">
                         <div class="_gfomxi">
                           <div id="inaccurate_incorrect-row-title" class="_gw4xx4">
                             It’s inaccurate or incorrect
@@ -27730,7 +27730,7 @@
                   </div>
                   <div id="not_real_place" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="not_real_place-row-radio-button" class="_13xlah4">
-                      <div class="_jro6t0">
+                      <div class="flex">
                         <div class="_gfomxi">
                           <div id="not_real_place-row-title" class="_gw4xx4">
                             It’s not a real place to stay
@@ -27746,7 +27746,7 @@
                   </div>
                   <div id="scam" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="scam-row-radio-button" class="_13xlah4">
-                      <div class="_jro6t0">
+                      <div class="flex">
                         <div class="_gfomxi">
                           <div id="scam-row-title" class="_gw4xx4">It’s a scam</div>
                         </div>
@@ -27759,7 +27759,7 @@
                   </div>
                   <div id="offensive" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="offensive-row-radio-button" class="_13xlah4">
-                      <div class="_jro6t0">
+                      <div class="flex">
                         <div class="_gfomxi">
                           <div id="offensive-row-title" class="_gw4xx4">It’s offensive</div>
                         </div>
@@ -27772,7 +27772,7 @@
                   </div>
                   <div id="something_else" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="something_else-row-radio-button" class="_13xlah4">
-                      <div class="_jro6t0">
+                      <div class="flex">
                         <div class="_gfomxi">
                           <div id="something_else-row-title" class="_gw4xx4">
                             It’s something else
