--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -13037,7 +13037,7 @@
                           <div style="display: contents;">
                           <div class="c1bp99s5 dir dir-ltr">
                             <nav aria-label="Search results pagination">
-                            <div class="_jro6t0">
+                            <div class="flex">
                               <button aria-label="Previous" disabled="" type="button" class="_139xesi">
                               <svg
                                 viewBox="0 0 32 32"
