--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7957,7 +7957,7 @@
                                   aria-labelledby="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-title"
                                   class="rcem0st dir dir-ltr"><label
                                     for="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-checkbox" class="_13xlah4">
-                                    <div class="_jro6t0">
+                                    <div class="flex">
                                       <div class="_7ytxmo"><span class="_10ndlvp"><input
                                             name="flexible-dates-checkbox-flexible-dates-checkbox-wishlist"
                                             id="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-checkbox"
@@ -8007,7 +8007,7 @@
                               <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                               <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                             </div>
-                            <div class="_jro6t0">
+                            <div class="flex">
                               <div class="_3zlfom" id="wishlistGuestPicker-adults-stepper"><button class="_ul9u8c" type="button"
                                   disabled="" aria-label="subtract"
                                   data-testid="wishlistGuestPicker-adults-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -8037,7 +8037,7 @@
                               <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                               <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                             </div>
-                            <div class="_jro6t0">
+                            <div class="flex">
                               <div class="_3zlfom" id="wishlistGuestPicker-children-stepper"><button class="_ul9u8c" type="button"
                                   disabled="" aria-label="subtract"
                                   data-testid="wishlistGuestPicker-children-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -8067,7 +8067,7 @@
                               <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                               <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                             </div>
-                            <div class="_jro6t0">
+                            <div class="flex">
                               <div class="_3zlfom" id="wishlistGuestPicker-infants-stepper"><button class="_ul9u8c" type="button"
                                   disabled="" aria-label="subtract"
                                   data-testid="wishlistGuestPicker-infants-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -8928,7 +8928,7 @@
                     <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                     <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-adults-stepper"><button class="_ul9u8c" type="button"
                         aria-label="subtract" data-testid="wishlistGuestPicker-adults-stepper-decrease-button"><span
                           class="_8ovatg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -8957,7 +8957,7 @@
                     <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                     <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-children-stepper"><button class="_ul9u8c" type="button"
                         disabled="" aria-label="subtract"
                         data-testid="wishlistGuestPicker-children-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -8987,7 +8987,7 @@
                     <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                     <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-infants-stepper"><button class="_ul9u8c" type="button"
                         disabled="" aria-label="subtract"
                         data-testid="wishlistGuestPicker-infants-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -9730,7 +9730,7 @@
                         aria-labelledby="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-title"
                         class="rcem0st dir dir-ltr"><label
                           for="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-checkbox" class="_13xlah4">
-                          <div class="_jro6t0">
+                          <div class="flex">
                             <div class="_7ytxmo"><span class="_10ndlvp"><input
                                   name="flexible-dates-checkbox-flexible-dates-checkbox-wishlist"
                                   id="flexible-dates-checkbox-flexible-dates-checkbox-wishlist-row-checkbox"
@@ -9778,7 +9778,7 @@
                     <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                     <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-adults-stepper"><button class="_ul9u8c" type="button"
                         aria-label="subtract" data-testid="wishlistGuestPicker-adults-stepper-decrease-button"><span
                           class="_8ovatg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -9807,7 +9807,7 @@
                     <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                     <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-children-stepper"><button class="_ul9u8c" type="button"
                         disabled="" aria-label="subtract"
                         data-testid="wishlistGuestPicker-children-stepper-decrease-button"><span class="_8ovatg"><svg
@@ -9837,7 +9837,7 @@
                     <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                     <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                   </div>
-                  <div class="_jro6t0">
+                  <div class="flex">
                     <div class="_3zlfom" id="wishlistGuestPicker-infants-stepper"><button class="_ul9u8c" type="button"
                         disabled="" aria-label="subtract"
                         data-testid="wishlistGuestPicker-infants-stepper-decrease-button"><span class="_8ovatg"><svg
