--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3763,12 +3763,12 @@
             <fieldset class="_25bp3z" role="radiogroup">
              <legend class="_1wjt7fx"></legend>
              <div class="_l8ik20">
-              <label for="last-30" class="_jro6t0">
+              <label for="last-30" class="flex">
                <input data-testid="last-30" id="last-30" name="date-range-type-radio-group" class="_unew8tb" type="radio" value="last-30" /><span class="_dclc1y"><div>Last 30 days</div></span>
               </label>
              </div>
              <div class="_l8ik20">
-              <label for="date-range" class="_jro6t0">
+              <label for="date-range" class="flex">
                <input data-testid="date-range" id="date-range" name="date-range-type-radio-group" class="_1j123cny" type="radio" value="date-range" checked="" /><span class="_dclc1y"><div>Specific date range</div></span>
               </label>
              </div>
