--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10934,7 +10934,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                     <div class="_121xeo4"></div>
                     <div>
                       <div class="_1ybqv45">
-                        <div class="_jro6t0">
+                        <div class="flex">
                           <div class="_10euflo">
                             <div class="_1h6n1zu"
                               style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
@@ -11064,7 +11064,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                 <div class="_12kfhdn">
                   <div class="_1p7bda">We’ll send you trip updates and a text to verify this number.<div class="_1xq6rjf">
                       <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
-                        <div class="_jro6t0">
+                        <div class="flex">
                           <div class="relative" style="flex: 1 1 0%;">
                             <div role="presentation" class="_sbmagf"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;">
@@ -11089,7 +11089,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                             </div>
                           </div>
                         </div>
-                        <div class="_jro6t0">
+                        <div class="flex">
                           <div class="relative" style="flex: 1 1 0%;">
                             <div role="presentation" class="_sbmagf"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
