--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -314,7 +314,7 @@
   <div style="margin-top: 16px; margin-bottom: 16px">
     <div id="23" aria-disabled="false" class="rcem0st dir dir-ltr">
       <label for="23-row-radio-button" class="_13xlah4"
-        ><div class="_jro6t0">
+        ><div class="flex">
           <div class="_7ytxmo">
             <input
               aria-labelledby="23-row-title"
@@ -342,7 +342,7 @@
     </div>
     <div id="0" aria-disabled="false" class="rcem0st dir dir-ltr">
       <label for="0-row-radio-button" class="_13xlah4"
-        ><div class="_jro6t0">
+        ><div class="flex">
           <div class="_7ytxmo">
             <input
               aria-labelledby="0-row-title"
@@ -823,7 +823,7 @@
                                                   <label
                                                     for="23-row-radio-button"
                                                     class="_13xlah4"
-                                                    ><div class="_jro6t0">
+                                                    ><div class="flex">
                                                       <div class="_7ytxmo">
                                                         <input
                                                           aria-labelledby="23-row-title"
@@ -877,7 +877,7 @@
                                                   <label
                                                     for="0-row-radio-button"
                                                     class="_13xlah4"
-                                                    ><div class="_jro6t0">
+                                                    ><div class="flex">
                                                       <div class="_7ytxmo">
                                                         <input
                                                           aria-labelledby="0-row-title"
