--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1068,7 +1068,7 @@
                                      <div class="_1byskwn">
                                       <div class="_eh05g0l">
                                        <div class="_1wlfjr">Group size</div>
-                                       <div class="_jro6t0">
+                                       <div class="flex">
                                         <div class="_6jnrcn">
                                          <div class="_9hxttoo">
                                           <label class="_krjbj" for="group_rate_min_group_size_0">Minimum group size</label>
