--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -337,7 +337,7 @@
                                    <div class="_oh61uc4">
                                     <div>
                                      <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
@@ -363,7 +363,7 @@
                                         ></div>
                                        </div>
                                       </div>
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
@@ -389,7 +389,7 @@
                                         ></div>
                                        </div>
                                       </div>
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
@@ -415,7 +415,7 @@
                                         ></div>
                                        </div>
                                       </div>
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
@@ -441,7 +441,7 @@
                                         ></div>
                                        </div>
                                       </div>
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
@@ -467,7 +467,7 @@
                                         ></div>
                                        </div>
                                       </div>
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;"></div>
                                         <div class="_ey3tib">
