flex-before-after

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1275,7 +1275,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="c1yo0219 dir dir-ltr">
+                                    <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_vl8fo3" style="border-top-color: rgb(235, 235, 235);"></div>
                                         <div class="_le6wlg">
@@ -1292,7 +1292,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="c1yo0219 dir dir-ltr">
+                                    <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_le6wlg">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -1315,7 +1315,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="c1yo0219 dir dir-ltr">
+                                    <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_le6wlg">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -1337,7 +1337,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="c1yo0219 dir dir-ltr">
+                                    <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_le6wlg">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -4717,7 +4717,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="flex-before-after dir dir-ltr">
                                           <div style="--gp-section-max-width:1120px;">
                                             <div style="margin-top: 8px; --gp-section-top-margin:8;">
                                               <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
@@ -4732,7 +4732,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="flex-before-after dir dir-ltr">
                                           <div style="--gp-section-max-width:1120px;">
                                             <div data-plugin-in-point-id="FIRST_MESSAGE" data-section-id="FIRST_MESSAGE" style="padding-bottom: 24px;">
                                               <div id="required-first-message-section">
@@ -4751,7 +4751,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="flex-before-after dir dir-ltr">
                                           <div style="--gp-section-max-width:1120px;">
                                             <div data-plugin-in-point-id="PROFILE_PHOTO" data-section-id="PROFILE_PHOTO" style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
@@ -4767,7 +4767,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="flex-before-after dir dir-ltr">
                                           <div style="--gp-section-max-width:1120px;">
                                             <div data-plugin-in-point-id="PHONE_VERIFICATION" data-section-id="PHONE_VERIFICATION"
                                               style="padding-bottom: 24px;">
