--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1524,7 +1524,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
              <div style="--gp-section-max-width: 1120px;">
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FORM" data-section-id="CONCEPT_REFINEMENT_0_FORM">
                <div class="c14z17by dir dir-ltr">
-                <div class="c1yo0219 dir dir-ltr">
+                <div class="flex-before-after dir dir-ltr">
                  <div style="--gp-section-max-width: 1120px;">
                   <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_MODAL" data-section-id="CONCEPT_REFINEMENT_0_MODAL">
                    <div class="_186jfb2">
@@ -3783,7 +3783,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
               <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FOOTER" data-section-id="CONCEPT_REFINEMENT_0_FOOTER" style="padding-top: 16px; padding-bottom: 16px;">
                <div class="c1sjhfzr t1pii32p dir dir-ltr">
-                <div class="c1yo0219 dir dir-ltr">
+                <div class="flex-before-after dir dir-ltr">
                  <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" data-section-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" style="display: contents;"><button type="button" class="btn-dark">Next</button></div>
                 </div>
                </div>
