--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8946,7 +8946,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 
 <div class="flex-before-after dir dir-ltr">
   <div style="--gp-section-max-width:1120px">
-    <div class="c1yo0219 dir dir-ltr">
+    <div class="flex-before-after dir dir-ltr">
       <div style="--gp-section-max-width:1120px;">
         <div class="_le6wlg">
           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -10962,7 +10962,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                 style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
                 <div class="_17itzz4">
                   <div class="_88xxct">
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width:1120px;">
                         <div data-plugin-in-point-id="BOOK_IT_MODAL" data-section-id="BOOK_IT_MODAL">
                           <div>                  
