--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5138,7 +5138,7 @@
                                 <div class="_le6wlg">
                                   <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                     <div class="_dmn8hc">
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div data-plugin-in-point-id="NAV_DEFAULT" data-section-id="NAV_DEFAULT"
                                           style="display: contents;">
                                           <div class="_17twi95">
@@ -5186,7 +5186,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div data-plugin-in-point-id="BOOK_IT_NAV" data-section-id="BOOK_IT_NAV"
                                           style="display: contents;">
                                           <div class="relative">
